# autobahn-artifact

./: Cargo.toml  README.md  install_deps.sh
benchmark/: .gitignore  fabfile.py  latencies.txt  plot-script.py  plot_latencies.py  requirements.txt  settings-autobahn-bullshark.json  settings-hotstuff-baselines.json  settings.json
benchmark/aws/: instance.py  remote.py  settings.py
benchmark/benchmark/: commands.py  config.py  gcp_instance.py  local.py  logs.py  plot.py  remote.py  settings.py  utils.py
config/src/: lib.rs
consensus/: Cargo.toml
consensus/src/: config.rs  core.rs  error.rs  lib.rs  mempool.rs  messages.rs
crypto/src/: lib.rs
experiment-configs/blips-graph/: autobahn.txt
experiment-configs/main-graph/: plot-script.py
experiment-configs/partition-graph/: autobahn.txt
experiment-configs/scaling-graph/: bar_plot.gpi  plot_workloads_tput_new.eps
hotstuff/src/: aggregator.rs  committer.rs  core.rs  messages.rs  proposer.rs
mempool/src/: core.rs  front.rs  lib.rs  mempool.rs  messages.rs  payload.rs  synchronizer.rs
network/src/: receiver.rs
node/: Cargo.toml
node/src/: benchmark_client.rs  client.rs  config.rs  main.rs  node.rs
primary/: Cargo.toml
primary/src/: aggregators.rs  certificate_waiter.rs  committer.rs  core.rs  error.rs  garbage_collector.rs  header_waiter.rs  helper.rs  leader.rs  lib.rs  messages.rs  payload_receiver.rs  primary.rs  proposer.rs  synchronizer.rs  timer.rs
primary/src/tests/: common.rs  core_tests.rs  messages_tests.rs  proposer_tests.rs
sailfish/: Cargo.toml
sailfish/src/: aggregator.rs  lib.rs  (+11 more)
(+228 files in other folders)
